--- a/kaufman.ipynb
+++ b/kaufman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,9 @@
     "\n",
     "n=2\n",
     "M=2\n",
-    "ai=1\n",
-    "ti=1\n",
-    "xn=ai\n",
+    "a=[1]\n",
+    "t=[1]\n",
+    "x=[]\n",
     "\n",
     "V=2\n",
     "\n",
@@ -24,12 +24,12 @@
     "\n",
     "def P(n):\n",
     "    if n == 0:\n",
-    "        return 1/sigma(xn, 0, V)\n",
+    "        return 1/sigma(x[n], 0, V)\n",
     "    else:\n",
-    "        return sigma(ai*ti*P(n-ti), 1, M)/n\n",
+    "        return sigma(a[i]*t[i]*P(n-ti), 1, M)/n\n",
     "\n",
     "def b(i):\n",
-    "    return sigma(P(n),V-ti+1,V)\n",
+    "    return sigma(P(n),V-t[i]+1,V)\n",
     "\n",
     "\n",
     "#f = open(\"Results.txt\", \"w\")\n",
