--- a/kaufman.ipynb
+++ b/kaufman.ipynb
@@ -2,61 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17844/3091019915.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msigma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[1;31m#f = open(\"Results.txt\", \"w\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;31m#f.write(\"A[i] = \"+np.array2string(A))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17844/3091019915.py\u001b[0m in \u001b[0;36mP\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0msigma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0msigma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunkcja\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17844/3091019915.py\u001b[0m in \u001b[0;36mx\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M =  2\n",
+      "V =  3\n",
+      "a = [0.4, 1]\n",
+      "t0 = 1\n",
+      "t1 = 2\n",
+      "X0 = 1\n",
+      "X1 = 0.4\n",
+      "X2 = 1.08\n",
+      "X3 = 0.41066666666666674\n",
+      "P0 = 0.3459409594095941\n",
+      "P1 = 0.13837638376383762\n",
+      "P2 = 0.3736162361623616\n",
+      "P3 = 0.14206642066420666\n",
+      "Prawdopodobienstwo blokady strumienia zgłoszen klasy (i = 1) = 0.14206642066420666\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "def calc_x(V,M,a,t):    # x0,x1,x2,x3\n",
+    "    X=[1]*(V+1)\t        #[1, 1, 1, 1]\n",
+    "    for n in range(1,V+1):\n",
+    "        sum=0\n",
+    "        for i in range(0,M):\n",
+    "            if n>=t[i]:\n",
+    "                sum+=a[i]*t[i]*X[n-t[i]]\n",
+    "            X[n]=sum/n\n",
+    "    return X\n",
     "\n",
-    "n=2\n",
-    "M=2\n",
-    "a=[1,2]\n",
-    "t=[1,2]\n",
-    "x=a\n",
     "\n",
-    "V=2\n",
+    "def calc_po(X):\n",
+    "\tsum=0\n",
+    "\tfor item in X:\n",
+    "\t\tsum+=item\n",
+    "\treturn 1/sum\n",
     "\n",
-    "def sigma(func, frm, to):\n",
-    "    result = 0;\n",
-    "    for i in range(frm, to+1):\n",
-    "        result += func(i)\n",
-    "    return result\n",
+    "def calc_pn(X,V,M,a,t):\n",
+    "\t#P=[1]*(V+1)\n",
+    "\tP[0]=calc_po(X)\n",
+    "\tfor n in range(1, V+1):\n",
+    "\t\tP[n] = P[0]*X[n]\n",
+    "\treturn P\n",
     "\n",
-    "def funkcja(n):\n",
-    "    return a[n]*t[n]*P(n-t[n])\n",
+    "def calc_b(V,P,t,i=1):\n",
+    "\tsum=0\n",
+    "\tfor n in range(V-t[i-1]+1, V+1):\n",
+    "\t\tsum+=P[n]\n",
+    "\treturn sum\n",
+    "\t\n",
     "\n",
-    "def x(n):\n",
-    "    return x[n]\n",
+    "V=3#pojemnosc wiazki wyrazona w kanalach lub podstawowych jednostkach pasma\n",
+    "M=2 #strumienie ruchu\n",
+    "t=[1,2]#liczba zad. jedn. przetwarzania\n",
+    "a=[0.4,1]\n",
+    "X=calc_x(V,M,a,t)\n",
+    "P=calc_pn(X,V,M,a,t)#prawdopodobienstwa znalezienia sie wiazki doskonalej w stanie zajetosci n kanalów P(n)\n",
+    "#i=1\n",
+    "#a=[[0.4,1],[0.5,0.8],[0.6,1],[0.4,0.6],[0.6,0.7]]\n",
     "\n",
-    "def P(n):\n",
-    "    if n == 0:\n",
-    "        return 1/sigma(x(n), 0, V)\n",
-    "    else:\n",
-    "        return sigma(funkcja(n), 1, M)/n\n",
+    "print(\"M = \", M)\n",
+    "print(\"V = \", V)\n",
+    "print('a = '+str(item_a))\n",
+    "count = 0\n",
+    "for item_t in t:\n",
+    "\tprint('t'+str(count)+' = '+str(item_t))\n",
+    "\tcount+=1\n",
+    "count = 0\n",
+    "for item_X in X:\n",
+    "\tprint('X'+str(count)+' = '+str(item_X))\n",
+    "\tcount+=1\n",
+    "count = 0\n",
+    "for item_P in P:\n",
+    "\tprint('P'+str(count)+' = '+str(item_P))\n",
+    "\tcount+=1\n",
+    "#print(\"P = \", P)\n",
+    "print(\"Prawdopodobienstwo blokady strumienia zgłoszen klasy (i = 1) =\", calc_b(V,P,t))\n",
     "\n",
-    "def b(i):\n",
-    "    return sigma(P(n),V-t[i]+1,V)\n",
     "\n",
-    "P(0)\n",
-    "#f = open(\"Results.txt\", \"w\")\n",
-    "#f.write(\"A[i] = \"+np.array2string(A))\n",
-    "#f.write(\"\\nP[n] = \"+str(p))\n",
-    "#f.write(\"\\nX[i] = \"+str(X))\n",
-    "#f.close()"
+    "#def calc_all(V,M,t,a,i=1):\n",
+    "#\tcalc_x(V,M,a,t)\n",
+    "#\tX=calc_x(V,M,a,t)\n",
+    "#\tP=calc_pn(X,V,M,a,t)\n",
+    "#\t#calc_po(X)\n",
+    "#\t#calc_pn(X,V,M,a,t)\n",
+    "#\tcalc_b(V,P,t,i=1)\n",
+    "\n",
+    "#for item_a in a:\n",
+    "#    print('ai = '+str(item_a))\n",
+    "#    for item_t in t:\n",
+    "#        print('ti = '+str(item_t))\n",
+    "#    print(calc_all(V, M, t, item_a))\n",
+    "\n"
    ]
   }
  ],
