--- a/kaufman.ipynb
+++ b/kaufman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,18 @@
      "output_type": "stream",
      "text": [
       "M =  2\n",
-      "V =  3\n",
-      "a = [0.4, 1]\n",
+      "V =  2\n",
+      "a = [0.4, 0.8]\n",
       "t0 = 1\n",
       "t1 = 2\n",
       "X0 = 1\n",
       "X1 = 0.4\n",
-      "X2 = 1.08\n",
-      "X3 = 0.41066666666666674\n",
-      "P0 = 0.3459409594095941\n",
-      "P1 = 0.13837638376383762\n",
-      "P2 = 0.3736162361623616\n",
-      "P3 = 0.14206642066420666\n",
-      "Prawdopodobienstwo blokady strumienia zgłoszen klasy (i = 1) = 0.14206642066420666\n"
+      "X2 = 0.8800000000000001\n",
+      "P0 = 0.43859649122807015\n",
+      "P1 = 0.17543859649122806\n",
+      "P2 = 0.3859649122807018\n",
+      "P3 = 0.12665985699693566\n",
+      "Prawdopodobienstwo blokady strumienia zgłoszen klasy (i = 1) = 0.3859649122807018\n"
      ]
     }
    ],
@@ -69,7 +68,7 @@
     "\n",
     "print(\"M = \", M)\n",
     "print(\"V = \", V)\n",
-    "print('a = '+str(item_a))\n",
+    "print('a = '+str(a))\n",
     "count = 0\n",
     "for item_t in t:\n",
     "\tprint('t'+str(count)+' = '+str(item_t))\n",
